ui/nav-title: fix layout bug

--- a/src/ui/nav-title/_nav-title.scss
+++ b/src/ui/nav-title/_nav-title.scss
@@ -1,3 +1,4 @@
 .co-m-nav-title {
   line-height: 60px;
+  margin: 0;
 }
